# rubberduck-use-case-playground

./: .gitignore  GUIDE.md  LICENSE  README.md  SETUP.md  TUTORIAL.md  pyproject.toml  requirements.txt
.github/: REPO_ABOUT.txt
demo-projects/: README.md  index.html  prompts.json
demo-projects/rubberduck_pizzeria-demoapp/tests/: test_search_customers_raw.py
demoapp/: __init__.py  __main__.py  application.py  config.py
demoapp/api/: server.py
demoapp/builders/: __init__.py  html.py
demoapp/cmd/: build.py
demoapp/db/: query.py
demoapp/ext/: github.py
docs/: EXPECTED_OUTCOMES.md  FULL_SESSION_LOG.md  HOW_TO_TEST.md  TEST_REPORT.md  indexed-repos.json  recommended-repos.md  uc-01.md  uc-02.md  uc-03.md  uc-04.md  uc-05.md  uc-06.md  uc-07.md  uc-08.md  uc-09.md  uc-10.md
fixtures/: uc-04-pr-order-by-diff.md
labs/: README.md  manifest.json
labs/uc01_understand/: README.md  verify.py
labs/uc02_security_lab/: README.md  verify.py
labs/uc03_buggy_orm/: README.md
labs/uc03_buggy_orm/tests/: test_aggregation.py
labs/uc04_pr_review/: README.md  verify.py
labs/uc05_impact/: README.md  verify.py
labs/uc05_impact/consumers/: reporting.py
labs/uc06_feature/: TASK.md
labs/uc06_feature/tests/: test_parallel_write.py
labs/uc07_codegen/: TASK.md
labs/uc08_logic/: verify.py
labs/uc09_compare/: verify.py
labs/uc10_quick/: verify.py
scripts/: build_session_log.py  generate_docs.py  run-lab.py  setup.ps1  setup.sh
scripts/docs/: uc-02.md  uc-04.md  uc-05.md  uc-06.md  uc-07.md  uc-08.md
tests/: test_demoapp.py
(+2 files in other folders)
