[project]
name = "rubberduck-use-case-playground"
version = "0.3.0"
description = "Rubber Duck Playground — demo-projects hub + UC-01..10 labs for RubberDuck MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["demo-projects/rubberduck_pizzeria-demoapp/package"]
include = ["rubber_duck_pizzeria*"]
